# M2_DZ2_LvovOM

./: Dockerfile  __main__.py  abcclass.py  addressbook.py  bot.py  logs.txt  pyproject.toml
