[tool.poetry]
name = "m2-dz2"
version = "0.1.0"
description = ""
authors = ["Lvov Aleksey <lvovlvov92@gmail.com>"]
readme = "README.md"
packages = [{include = "m2_dz2"}]

[tool.poetry.dependencies]
python = "3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
